--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 	},
 	"license": "MIT",
 	"repository": {
-		"type": "",
-		"url": ""
+		"type": "git",
+		"url": "git+https://github.com/ohhari/companion-module-siemens-paw-snmp"
 	},
 	"dependencies": {
 		"@companion-module/base": "~1.5.1",
